--- a/home.html
+++ b/home.html
@@ -3,6 +3,9 @@
 	<head>
 		<title>CountryCapture</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<style>
+			[v-cloak] {display: none;}
+		</style>
 	</head>
 	<body>
 		<div class="jumbotron text-center">
@@ -11,35 +14,34 @@
 		</div>
 		<div id="app" class="container">
 			<div class="row">
-				<div class="col-sm-4">
-					<h3>Engagement</h3>
-					<p>{{ perSession }}  per session.</p>
-				</div>
-				<div class="col-sm-4">
-					<h3>Weddings</h3>
-					<p>{{ perHour }} per hour.</p>
-				</div>
-				<div class="col-sm-4">
-					<h3>Family</h3>
-					<p>{{ perSession }}  per session.</p>
-				</div>
-				<div class="col-sm-4">
-					<h3>Maternity</h3>
-					<p>{{ perSession }}  per session.</p>
-				</div>
-				<div class="col-sm-4">
-					<h3>Maternity</h3>
-					<p>{{ perSession }}  per session.</p>
-				</div>
+				<h3>Engagement</h3>
 			</div>
-		</div>
+			<div class="row">
+				<h3>Weddings</h3>
+			</div>
+			<div class="row">
+				<h3>Family</h3>
+			</div>
+			<div class="row">
+				<h3>Maternity</h3>
+			</div>
+			<div class="row">
+				<h3>Maternity</h3>
+			</div>
+		</div> 
+		<!-- Import vue.js -->
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		<script>
 			var vm = new Vue({
 				el: "#app",
+				created: function () {
+				},
 				data: {
-					perSession: "$45",
-					perHour: "$200"
+				},
+				methods: {
+					wedPage: function () {
+						alert("TEST")
+					}
 				}
 			});
 		</script>
